--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,12 @@ on:
       NPM_TOKEN:
         description: "NPM token for publishing packages"
         required: false
+      BOT_APP_ID:
+        description: "GitHub App ID for CLDMV bot"
+        required: false
+      BOT_APP_PRIVATE_KEY:
+        description: "GitHub App private key for CLDMV bot"
+        required: false
 
 jobs:
   release:
@@ -115,6 +121,8 @@ jobs:
       skip_matrix_tests: ${{ inputs.skip_matrix_tests }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
+      BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
 
   summary:
     name: "📋 Release Summary"
