fix: properly pass App token through action call chain

--- a/.github/actions/git/jobs/update-major-version-tags/action.yml
+++ b/.github/actions/git/jobs/update-major-version-tags/action.yml
@@ -85,6 +85,7 @@ runs:
       uses: CLDMV/.github/.github/actions/github/jobs/fix-orphaned-version-tags@v1
       with:
         repo: ${{ inputs.repo || github.repository }}
+        github_token: ${{ env.GITHUB_TOKEN }}
         sign: ${{ inputs.sign }}
         annotate: ${{ inputs.annotate }}
         tagger_name: ${{ inputs.tagger_name }}
