--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -33,11 +33,11 @@ jobs:
     permissions:
       contents: write
     with:
-      create_documentation: ${{ inputs.create_documentation || true }}
+      create_documentation: ${{ inputs.create_documentation || 'true' }}
       sign: ${{ inputs.sign || 'auto' }}
       annotate: ${{ inputs.annotate || 'auto' }}
       # let the reusable decide whether to use secrets based on this flag
-      use_gpg: ${{ inputs.use_gpg || true }}
+      use_gpg: ${{ inputs.use_gpg || 'true' }}
       # Note: use_app_token is automatically determined in the reusable workflow based on BOT_APP_ID presence
     secrets:
       # map your repo/org secrets into generic names expected by the reusable
