style(workflows): update workflow names for consistency and clarity

--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -1,4 +1,5 @@
-name: "CI Jobs Orchestrator (Org-Level)"
+# CLDMV/.github/.github/workflows/ci-jobs.yml
+name: ⚙️ CI Jobs Workflow (Internal Org-Level)
 
 on:
   workflow_call:
