--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -51,6 +51,10 @@ jobs:
       updated: ${{ steps.tags.outputs.updated }}
       has-version-tags: ${{ steps.tags.outputs.has-version-tags }}
       should-run: ${{ steps.tags.outputs.should-run }}
+      fixed-orphans: ${{ steps.tags.outputs.fixed-orphans }}
+      orphans-found: ${{ steps.tags.outputs.orphans-found }}
+      fixed-bot-signatures: ${{ steps.fix-bot-signatures.outputs.fixed-tags }}
+      non-bot-tags-found: ${{ steps.fix-bot-signatures.outputs.non-bot-tags-found }}
     steps:
       - name: Create App token (auto-detect)
         id: app-token
@@ -58,6 +62,20 @@ jobs:
         env:
           BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
           BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: Fix non-bot-signed version tags
+        id: fix-bot-signatures
+        uses: CLDMV/.github/.github/actions/git/jobs/fix-non-bot-tags@v1
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        with:
+          sign: ${{ inputs.sign }}
+          annotate: ${{ inputs.annotate }}
+          # forward identity & GPG only if toggled on
+          tagger_name: ${{ inputs.use_gpg && secrets.TAGGER_NAME   || '' }}
+          tagger_email: ${{ inputs.use_gpg && secrets.TAGGER_EMAIL  || '' }}
+          gpg_private_key: ${{ inputs.use_gpg && secrets.GPG_PRIVATE_KEY || '' }}
+          gpg_passphrase: ${{ inputs.use_gpg && secrets.GPG_PASSPHRASE  || '' }}
 
       - name: Check for version tags and update
         id: tags
