--- a/.github/actions/git/steps/update-major-version-tags/action.yml
+++ b/.github/actions/git/steps/update-major-version-tags/action.yml
@@ -58,12 +58,9 @@ runs:
         echo "updated=true" >> $GITHUB_OUTPUT
 
     - name: Update tags with proper signing
+      if: ${{ steps.update.outputs.updated == 'true' }}
       uses: CLDMV/.github/.github/actions/github/api/tag/upsert-batch@v1
       with:
         payload: ${{ steps.update.outputs.tags-payload }}
         sign: "auto"
         annotate: "auto"
-
-
-
-
