--- a/.github/actions/github/api/tag/update/action.yml
+++ b/.github/actions/github/api/tag/update/action.yml
@@ -2,6 +2,10 @@ name: tag-update
 description: "Move an existing tag to a new commit using a new VERIFIED annotated tag object"
 
 inputs:
+  debug:
+    description: "Enable debug logging"
+    required: false
+    default: "false"
   sign:
     description: "Sign the tag? 'auto' (default) signs if a GPG key is provided; 'true' forces signing; 'false' disables it."
     required: false
