--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -4,6 +4,11 @@ name: ⚙️ CI Jobs Workflow (Internal Org-Level)
 on:
   workflow_call:
     inputs:
+      debug:
+        description: "Enable debug logging for troubleshooting"
+        required: false
+        type: boolean
+        default: false
       run_download_artifacts:
         description: "Run download artifacts job"
         required: false
@@ -48,6 +53,16 @@ on:
         default: false
       run_update_major_version_tags:
         description: "Run update major version tags job"
+        required: false
+        type: boolean
+        default: false
+      run_fix_bot_signatures:
+        description: "Run fix non-bot-signed version tags job"
+        required: false
+        type: boolean
+        default: false
+      run_update_version_tags:
+        description: "Run update major/minor version tags job"
         required: false
         type: boolean
         default: false
@@ -151,6 +166,23 @@ on:
         type: boolean
         default: true
 
+      # Version tag parameters
+      sign:
+        description: "Smart signing mode (auto/true/false)"
+        required: false
+        type: string
+        default: "auto"
+      annotate:
+        description: "Smart annotate mode (auto/true/false)"
+        required: false
+        type: string
+        default: "auto"
+      use_gpg:
+        description: "If true, forward provided secrets to enable signing"
+        required: false
+        type: boolean
+        default: false
+
     secrets:
       NPM_TOKEN:
         description: "NPM token for publishing packages"
@@ -160,6 +192,18 @@ on:
         required: false
       BOT_APP_PRIVATE_KEY:
         description: "GitHub App private key for CLDMV bot"
+        required: false
+      TAGGER_NAME:
+        description: "GPG tagger name for signing"
+        required: false
+      TAGGER_EMAIL:
+        description: "GPG tagger email for signing"
+        required: false
+      GPG_PRIVATE_KEY:
+        description: "ASCII-armored private key for signing"
+        required: false
+      GPG_PASSPHRASE:
+        description: "Passphrase for the private key (if protected)"
         required: false
 
     outputs:
@@ -195,13 +239,31 @@ on:
       # Version tag outputs
       major-version:
         description: "The major version tag that was updated"
-        value: ${{ jobs.update-major-version-tags.outputs.major-version }}
+        value: ${{ jobs.update-version-tags.outputs.major-version }}
       minor-version:
         description: "The minor version tag that was updated"
-        value: ${{ jobs.update-major-version-tags.outputs.minor-version }}
+        value: ${{ jobs.update-version-tags.outputs.minor-version }}
       tags-updated:
         description: "Whether version tags were updated"
-        value: ${{ jobs.update-major-version-tags.outputs.updated }}
+        value: ${{ jobs.update-version-tags.outputs.updated }}
+      has-version-tags:
+        description: "Whether the repository has version tags"
+        value: ${{ jobs.update-version-tags.outputs.has-version-tags }}
+      should-run:
+        description: "Whether tag updates should run"
+        value: ${{ jobs.update-version-tags.outputs.should-run }}
+      fixed-orphans:
+        description: "Orphaned tags that were fixed"
+        value: ${{ jobs.update-version-tags.outputs.fixed-orphans }}
+      orphans-found:
+        description: "Whether orphaned tags were found"
+        value: ${{ jobs.update-version-tags.outputs.orphans-found }}
+      fixed-bot-signatures:
+        description: "Non-bot tags that were fixed"
+        value: ${{ jobs.fix-bot-signatures.outputs.fixed-tags }}
+      non-bot-tags-found:
+        description: "Whether non-bot tags were found"
+        value: ${{ jobs.fix-bot-signatures.outputs.non-bot-tags-found }}
 
 jobs:
   set-matrix:
@@ -411,16 +473,15 @@ jobs:
           publish-command: ${{ inputs.publish_command_github_packages }}
           github-token: ${{ github.token }}
 
-  update-major-version-tags:
-    name: "🏷️ Process Version Tags"
-    if: inputs.run_update_major_version_tags == true
+  fix-bot-signatures:
+    name: "🤖 Fix Non-Bot-Signed Version Tags"
+    if: inputs.run_fix_bot_signatures == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
     outputs:
-      major-version: ${{ steps.update.outputs.major-version }}
-      minor-version: ${{ steps.update.outputs.minor-version }}
-      updated: ${{ steps.update.outputs.updated }}
+      fixed-tags: ${{ steps.fix-bot-signatures.outputs.fixed-tags }}
+      non-bot-tags-found: ${{ steps.fix-bot-signatures.outputs.non-bot-tags-found }}
     steps:
       - name: Create App token (auto-detect)
         id: app-token
@@ -429,10 +490,62 @@ jobs:
           BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
           BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
 
-      - name: Update Major Version Tags
-        id: update
+      - name: Fix non-bot-signed version tags
+        id: fix-bot-signatures
+        uses: CLDMV/.github/.github/actions/git/jobs/fix-non-bot-tags@v1
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          CI_DEBUG: ${{ inputs.debug && 'true' || 'false' }}
+        with:
+          debug: ${{ inputs.debug }}
+          sign: ${{ inputs.sign || 'auto' }}
+          annotate: ${{ inputs.annotate }}
+          # forward identity & GPG only if toggled on
+          tagger_name: ${{ inputs.use_gpg && secrets.TAGGER_NAME   || '' }}
+          tagger_email: ${{ inputs.use_gpg && secrets.TAGGER_EMAIL  || '' }}
+          gpg_private_key: ${{ inputs.use_gpg && secrets.GPG_PRIVATE_KEY || '' }}
+          gpg_passphrase: ${{ inputs.use_gpg && secrets.GPG_PASSPHRASE  || '' }}
+
+  update-version-tags:
+    name: "🏷️ Update Major/Minor Version Tags"
+    if: inputs.run_update_version_tags == true
+    runs-on: ubuntu-latest
+    needs: fix-bot-signatures
+    permissions:
+      contents: write
+    outputs:
+      major-version: ${{ steps.tags.outputs.major-version }}
+      minor-version: ${{ steps.tags.outputs.minor-version }}
+      updated: ${{ steps.tags.outputs.updated }}
+      has-version-tags: ${{ steps.tags.outputs.has-version-tags }}
+      should-run: ${{ steps.tags.outputs.should-run }}
+      fixed-orphans: ${{ steps.tags.outputs.fixed-orphans }}
+      orphans-found: ${{ steps.tags.outputs.orphans-found }}
+      # Pass through outputs from first job
+      fixed-bot-signatures: ${{ needs.fix-bot-signatures.outputs.fixed-tags }}
+      non-bot-tags-found: ${{ needs.fix-bot-signatures.outputs.non-bot-tags-found }}
+    steps:
+      - name: Create App token (auto-detect)
+        id: app-token
+        uses: CLDMV/.github/.github/actions/github/steps/create-app-token@v1
+        env:
+          BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
+          BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: Check for version tags and update
+        id: tags
         uses: CLDMV/.github/.github/actions/git/jobs/update-major-version-tags@v1
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+          CI_DEBUG: ${{ inputs.debug && 'true' || 'false' }}
         with:
+          debug: ${{ inputs.debug }}
           create-documentation: ${{ inputs.create_documentation }}
+          sign: ${{ inputs.sign }}
+          annotate: ${{ inputs.annotate }}
+
+          # forward identity & GPG only if toggled on
+          tagger_name: ${{ inputs.use_gpg && secrets.TAGGER_NAME   || '' }}
+          tagger_email: ${{ inputs.use_gpg && secrets.TAGGER_EMAIL  || '' }}
+          gpg_private_key: ${{ inputs.use_gpg && secrets.GPG_PRIVATE_KEY || '' }}
+          gpg_passphrase: ${{ inputs.use_gpg && secrets.GPG_PASSPHRASE  || '' }}
