--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -6,6 +6,11 @@ on:
   push:
   workflow_dispatch:
     inputs:
+      debug:
+        description: "Enable debug logging for troubleshooting"
+        type: boolean
+        required: false
+        default: false
       use_gpg:
         description: "Use GPG signing via CLDMV_ secrets?"
         type: boolean
@@ -33,6 +38,7 @@ jobs:
     permissions:
       contents: write
     with:
+      debug: ${{ (github.event_name == 'workflow_dispatch' && (github.event.inputs.debug == 'true' || github.event.inputs.debug == true)) || false }}
       create_documentation: ${{ (github.event_name == 'workflow_dispatch' && (github.event.inputs.create_documentation == 'true' || github.event.inputs.create_documentation == true)) || (github.event_name != 'workflow_dispatch' && true) }}
       sign: "${{ github.event.inputs.sign || 'auto' }}"
       annotate: "${{ github.event.inputs.annotate || 'auto' }}"
