--- a/.github/workflows/update-major-version-tags.yml
+++ b/.github/workflows/update-major-version-tags.yml
@@ -4,6 +4,11 @@ name: 📌 Update Major Version Tags (Org-Level)
 on:
   workflow_call:
     inputs:
+      debug:
+        description: "Enable debug logging for troubleshooting"
+        required: false
+        type: boolean
+        default: false
       create_documentation:
         description: "Whether to create/update VERSION_TAGS.md documentation"
         required: false
@@ -42,53 +47,24 @@ permissions:
   contents: write
 
 jobs:
-  update:
-    name: Update major/minor version tags
-    runs-on: ubuntu-latest
-    outputs:
-      major-version: ${{ steps.tags.outputs.major-version }}
-      minor-version: ${{ steps.tags.outputs.minor-version }}
-      updated: ${{ steps.tags.outputs.updated }}
-      has-version-tags: ${{ steps.tags.outputs.has-version-tags }}
-      should-run: ${{ steps.tags.outputs.should-run }}
-      fixed-orphans: ${{ steps.tags.outputs.fixed-orphans }}
-      orphans-found: ${{ steps.tags.outputs.orphans-found }}
-      fixed-bot-signatures: ${{ steps.fix-bot-signatures.outputs.fixed-tags }}
-      non-bot-tags-found: ${{ steps.fix-bot-signatures.outputs.non-bot-tags-found }}
-    steps:
-      - name: Create App token (auto-detect)
-        id: app-token
-        uses: CLDMV/.github/.github/actions/github/steps/create-app-token@v1
-        env:
-          BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
-          BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
-
-      - name: Fix non-bot-signed version tags
-        id: fix-bot-signatures
-        uses: CLDMV/.github/.github/actions/git/jobs/fix-non-bot-tags@v1
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-        with:
-          sign: ${{ inputs.sign || 'auto' }}
-          annotate: ${{ inputs.annotate }}
-          # forward identity & GPG only if toggled on
-          tagger_name: ${{ inputs.use_gpg && secrets.TAGGER_NAME   || '' }}
-          tagger_email: ${{ inputs.use_gpg && secrets.TAGGER_EMAIL  || '' }}
-          gpg_private_key: ${{ inputs.use_gpg && secrets.GPG_PRIVATE_KEY || '' }}
-          gpg_passphrase: ${{ inputs.use_gpg && secrets.GPG_PASSPHRASE  || '' }}
-
-      - name: Check for version tags and update
-        id: tags
-        uses: CLDMV/.github/.github/actions/git/jobs/update-major-version-tags@v1
-        env:
-          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-        with:
-          create-documentation: ${{ inputs.create_documentation }}
-          sign: ${{ inputs.sign }}
-          annotate: ${{ inputs.annotate }}
-
-          # forward identity & GPG only if toggled on
-          tagger_name: ${{ inputs.use_gpg && secrets.TAGGER_NAME   || '' }}
-          tagger_email: ${{ inputs.use_gpg && secrets.TAGGER_EMAIL  || '' }}
-          gpg_private_key: ${{ inputs.use_gpg && secrets.GPG_PRIVATE_KEY || '' }}
-          gpg_passphrase: ${{ inputs.use_gpg && secrets.GPG_PASSPHRASE  || '' }}
+  version-tag-operations:
+    name: Version Tag Operations
+    uses: CLDMV/.github/.github/workflows/ci-jobs.yml@v1
+    permissions:
+      contents: write
+    with:
+      package_name: "version-tags"  # Required input, but not used for this operation
+      debug: ${{ inputs.debug }}
+      run_fix_bot_signatures: true
+      run_update_version_tags: true
+      create_documentation: ${{ inputs.create_documentation }}
+      sign: ${{ inputs.sign }}
+      annotate: ${{ inputs.annotate }}
+      use_gpg: ${{ inputs.use_gpg }}
+    secrets:
+      TAGGER_NAME: ${{ secrets.TAGGER_NAME }}
+      TAGGER_EMAIL: ${{ secrets.TAGGER_EMAIL }}
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+      BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
+      BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
