--- a/examples/individual-repo-workflows/publish.yml
+++ b/examples/individual-repo-workflows/publish.yml
@@ -5,6 +5,13 @@ on:
   pull_request:
     types: [closed]
     branches: [master, main]
+  workflow_dispatch:
+    inputs:
+      debug:
+        description: "Enable debug logging for troubleshooting"
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   publish-package:
@@ -12,6 +19,7 @@ jobs:
     uses: CLDMV/.github/.github/workflows/publish.yml@v1
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
+      debug: ${{ github.event_name == 'workflow_dispatch' && inputs.debug || false }} # Enable debug logging
       # version: "1.0.0" # Version to publish - auto-detected from package.json if not provided (default: "")
 
       # Node.js Version Configuration
