--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,7 +105,7 @@ on:
 jobs:
   release:
     name: "🚀 Release Management"
-    uses: ./.github/workflows/ci-jobs.yml
+    uses: CLDMV/.github/.github/workflows/ci-jobs.yml@v1
     with:
       package_name: ${{ inputs.package_name }}
       debug: ${{ inputs.debug }}
