--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ on:
 jobs:
   ci:
     name: "🏗️ Continuous Integration"
-    uses: ./.github/workflows/ci-jobs.yml
+    uses: CLDMV/.github/.github/workflows/ci-jobs.yml@v1
     with:
       package_name: ${{ inputs.package_name }}
       debug: ${{ inputs.debug }}
